<resources>
    <string name="app_name">微聚</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--警告栏-->
    <string name="alert">警告</string>
    <string name="info">提示</string>
    <string name="error">错误</string>

    <string name="alert_field_empty">"请填写所有必填信息"</string>
    <string name="alert_field_number">请填写数字</string>
    <string name="alert_logout">是否注销登录？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <!-- 侧滑栏 -->
    <string name="settings">设置</string>
    <string name="exit">退出</string>
    <string name="all_tasks">所有任务</string>
    <string name="my_task">我的任务</string>
    <string name="exchange">积分兑换</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>


    <!-- 登录页面 -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_login">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="email_error">邮箱格式错误</string>
    <string name="bad_credential">账号或密码错误</string>

    <!--主界面-->
    <string name="welcome_back">欢迎回来</string>
    <string name="continue_task">你还有正在进行中的任务，是否继续？</string>
    <string name="continue_">继续</string>
    <string name="view_details">查看详情</string>
    <string name="annotation_task">标注任务</string>
    <string name="collection_task">采集任务</string>

    <!--任务详情页-->
    <string name="task_details">任务详情</string>
    <string name="get_task">领取任务</string>
    <string name="apply_success">领取成功</string>
    <string name="apply_error">领取失败</string>
    <string name="enter_task">进入任务</string>

    <!--我的任务-->
    <string name="my_all_tasks">所有</string>
    <string name="finished_task">已完成</string>
    <string name="processing_task">进行中</string>

    <!--任务发布页-->
    <string name="publish_task">发布任务</string>
    <string name="task_name">任务名称</string>
    <string name="task_type">任务类型</string>
    <string name="task_size">任务数量</string>
    <string name="task_start">开始时间</string>
    <string name="task_end">截止时间</string>
    <string name="task_cover">任务封面</string>
    <string name="task_description">任务描述</string>
    <string name="edit_task_description">编辑任务描述</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_error">发布失败</string>


    <!--编辑器-->
    <string name="menu_undo">撤销</string>
    <string name="menu_redo">重做</string>
    <string name="menu_github">GitHub</string>
    <string name="menu_finished">确认</string>

    <string name="dialog_title">插入链接</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">确认</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="submit_permit">确认提交吗</string>

    <string name="toast_bold">加粗</string>
    <string name="toast_italic">斜体</string>
    <string name="toast_underline">下划线</string>
    <string name="toast_strikethrough">删除线</string>
    <string name="toast_bullet">列表</string>
    <string name="toast_quote">引用</string>
    <string name="toast_insert_link">插入连接</string>
    <string name="toast_format_clear">清除格式</string>

    <!--采集任务页-->
    <string name="commit">提交</string>
    <string name="alert_wrong_selection">你应该选择张%d图片</string>
    <string name="commit_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <!--标注任务页-->
    <string name="add_tag">添加标签</string>
    <string name="add_success">添加成功</string>
    <string name="next_step">保存</string>
    <string name="prev_img">上一张</string>
    <string name="next_img">下一张</string>
    <string name="alert_first">已经是第一张图片了</string>
    <string name="alert_last">已经是最后一张图片了</string>
    <string name="clear_all">清空</string>
    <string name="undo">上一步</string>
    <string name="tag_prompt">请选择框图的标签</string>
    <!--标签属性编辑页-->
    <string name="save">保存</string>

    <!--用户详情-->
    <string name="user_name">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="credit">信用</string>
    <string name="balance">账户余额</string>
    <string name="level">等级</string>
    <!--来自于github的测试数据-->
    <!--<string name="app_name">Material Profile</string>-->
    <string name="action_settings">Settings</string>
</resources>