<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/task"
            android:checked="true"
            />
        <item
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_task" />
        <item
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/exchange" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>

</menu>
