<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.edu.sustc.androidclient.ui.main.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout

        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:weightSum="10"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="23dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/continue_task"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="116dp"
                    android:layout_height="57dp"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="29dp"
                        android:text="@string/continue_"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="24dp"
                        android:text="@string/no" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <FrameLayout
            android:id="@+id/task_fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/ic_action_edit" />
</RelativeLayout>