<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="cn.edu.sustc.androidclient.view.task.publishtask.TaskPublishViewModel"/>
    </data>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="73dp"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:text="@string/task_cover"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="73dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/task_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="73dp"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:text="@string/task_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/task_cover" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="73dp"
                    android:layout_height="28dp"
                    android:gravity="center"
                    android:text="@string/task_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/task_name" />

            <Button
                android:id="@+id/publish_button"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/publish_task"
                android:textColor="#fff"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editor_button"
                app:layout_constraintVertical_bias="0.909" />

            <EditText
                android:id="@+id/task_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/task_name"
                android:inputType="textShortMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/task_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/task_size"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="73dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/task_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/task_size" />

                <Button
                    android:id="@+id/editor_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_editor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <ImageView
                android:id="@+id/task_cover"
                android:layout_width="0dp"
                android:layout_height="197dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:srcCompat="@drawable/background_signup" />
        </android.support.constraint.ConstraintLayout>
</layout>
