<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registrationActivity"
            type="cn.edu.sustc.androidclient.view.authentication.RegistrationActivity" />
    </data>



    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1F2F6"
        android:orientation="vertical"
        tools:context=".view.authentication.RegistrationActivity">

        <ImageView
            android:id="@+id/signup_image"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            app:srcCompat="@drawable/background_signup"/>

        <!-- 输入框 -->
        <EditText
            android:id="@+id/signup_email"
            android:layout_width="250dp"
            android:layout_height="58dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_edittext_signup"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="25dp"
            android:singleLine="true"
            android:text="@={registrationActivity.email}"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_image" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="250dp"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext_signup"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="25dp"
            android:singleLine="true"
            android:text="@={registrationActivity.password}"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_email" />

        <android.support.v7.widget.CardView
            android:id="@+id/signup_btn"
            android:layout_width="250dp"
            android:layout_height="58dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="8dp"
            android:onClick="@{registrationActivity::registration}"
            app:cardBackgroundColor="@color/button_signinPage"
            app:cardCornerRadius="29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_password">


            <RelativeLayout
                android:id="@+id/click_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/action_sign_up"
                    android:textColor="#020202"
                    android:textSize="18sp" />
            </RelativeLayout>


        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>