<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="cn.edu.sustc.androidclient.view.profile.ProfileActivity"/>
    </data>
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="cn.edu.sustc.androidclient.view.profile.ProfileActivity"
        tools:showIn="@layout/activity_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin">

                <!--用户名的标注-->
                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />

                <!--真的用户名-->
                <EditText
                    android:id="@+id/user_name"
                    android:layout_below="@id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:enabled="false"
                    android:text="@{viewModel.user.username}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin">

                <!--邮箱的标注-->
                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/prompt_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />

                <!--真的邮箱-->
                <TextView
                    android:layout_below="@id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@{viewModel.user.email}"
                    android:enabled="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin">

                <!--手机号的标注-->
                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone_number"
                    android:enabled="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />

                <!--真的手机号-->
                <EditText
                    android:id="@+id/phone"
                    android:layout_below="@id/textview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@{viewModel.user.phone}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </RelativeLayout>

            <!--这是一个分割线-->
            <include layout="@layout/item_divider" />

            <!--信用的展示-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/userprofile_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/credit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />

                <TextView
                    android:layout_below="@id/userprofile_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@{String.valueOf(viewModel.user.credit)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </RelativeLayout>

            <!--余额的展示-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/userprofile_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />

                <TextView
                    android:layout_below="@id/userprofile_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@{String.valueOf(viewModel.user.balance)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </RelativeLayout>


            <!--这是一个分割线-->
            <include layout="@layout/item_divider" />

            <!--等级的展示-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/userprofile_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/level"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#727272" />

                <TextView
                    android:layout_below="@id/userprofile_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@{String.valueOf(viewModel.user.level)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#212121" />
            </RelativeLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>